feat: Reports of zip import - EXO-65201

--- a/documents-webapp/src/main/webapp/skin/less/documents.less
+++ b/documents-webapp/src/main/webapp/skin/less/documents.less
@@ -906,3 +906,13 @@
     padding-right: 8px ~'; /** orientation=rt */ ';
   }
 }
+
+.chevron-icon {
+  width: 22px;
+  height: 22px;
+}
+ 
+.disable-pointer-event {
+  pointer-events: none;
+ }
+ 
