--- a/documents-webapp/src/main/webapp/skin/less/documents.less
+++ b/documents-webapp/src/main/webapp/skin/less/documents.less
@@ -493,7 +493,6 @@
 
       .menu-text {
         font-size: 13px !important;
-        color: var(--allPagesDarkGrey, #4d5466) !important;
       }
 
       .add-menu-btn {
@@ -513,9 +512,6 @@
     }
     .add-menu-list-item{
       min-height: 35px !important;
-    }
-    .add-menu-list-item .v-icon{
-      color: var(--allPagesDarkGrey, #4d5466) !important;
     }
   }
 
@@ -910,3 +906,13 @@
     padding-right: 8px ~'; /** orientation=rt */ ';
   }
 }
+
+.chevron-icon {
+  width: 22px;
+  height: 22px;
+}
+ 
+.disable-pointer-event {
+  pointer-events: none;
+ }
+ 
